# sthash

./: .clang-format  CMakeLists.txt  DEF  LICENSE  README.md  xmake.lua
src/: sthash.c  sthash.h
